Unix 'make spotless' - remove lev_comp + dgn_comp
In case someone switches from NetHack-3.6 to NetHack-3.7 and does
'make spotless' after the switch instead of before, get rid of out
of date lev_comp and dgn_comp.

--- a/sys/unix/Makefile.utl
+++ b/sys/unix/Makefile.utl
@@ -441,7 +441,10 @@ clean-fixup:
 clean: clean-fixup
 	-rm -f *.o
 
+# obsolete dgn_comp and lev_comp could be left around from 3.6.x
 spotless: clean
 	-rm -f makedefs recover dlb $(HACKLIB)
 	-rm -f gif2txt txt2ppm tile2x11 tile2img.ttp xpm2img.ttp \
 		tilemap tileedit tile2bmp uudecode
+	-rm -f dgn_comp* dgn_lex.c dgn_yacc.c ../include/dgn_comp.h \
+		lev_comp* lev_lex.c lev_yacc.c ../include/lev_comp.h
