--- a/sys/windows/vs/uudecode/uudecode.vcxproj
+++ b/sys/windows/vs/uudecode/uudecode.vcxproj
@@ -31,10 +31,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="$(SysShareDir)uudecode.c">
-      <DisableSpecificWarnings Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">4820;4702;4706;4244;4245;4100;4310</DisableSpecificWarnings>
-      <DisableSpecificWarnings Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">4820;4702;4706;4244;4245;4100;4310</DisableSpecificWarnings>
-      <DisableSpecificWarnings Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">4820;4702;4706;4244;4245;4100;4310</DisableSpecificWarnings>
-      <DisableSpecificWarnings Condition="'$(Configuration)|$(Platform)'=='Release|x64'">4820;4702;4706;4244;4245;4100;4310</DisableSpecificWarnings>
+      <DisableSpecificWarnings>4820;4702;4706;4244;4245;4100;4310</DisableSpecificWarnings>
     </ClCompile>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
