--- a/sys/windows/Makefile.mingw32
+++ b/sys/windows/Makefile.mingw32
@@ -334,15 +334,19 @@ else
 DLBFLG =
 endif
 
+
 ifeq "$(GCC_EXTRA_WARNINGS)" "Y"
 #
 # These match the warnings enabled on the linux.370 and macOS.370 hints builds
 #
-CFLAGSXTRA = -Wall -Wextra -Wno-missing-field-initializers -Wreturn-type \
-		-Wunused -Wformat -Wswitch -Wshadow -Wwrite-strings -pedantic \
-		-Wmissing-declarations -Wformat-nonliteral -Wunreachable-code \
-		-Wimplicit -Wimplicit-function-declaration -Wimplicit-int \
-		-Wmissing-prototypes -Wold-style-definition -Wstrict-prototypes
+CFLAGSXTRA = -Wall -Wextra -Wreturn-type -Wunused -Wformat -Wswitch -Wshadow \
+	     -Wwrite-strings -pedantic -Wmissing-declarations \
+	     -Wformat-nonliteral -Wunreachable-code -Wimplicit \
+	     -Wimplicit-function-declaration -Wimplicit-int \
+	     -Wmissing-prototypes -Wold-style-definition \
+	     -Wstrict-prototypes -Wnonnull -Wformat-overflow \
+	     -Wmissing-parameter-type -Wimplicit-fallthrough
+
 CPPFLAGSXTRA = -Wall -Wextra -Wno-missing-field-initializers -Wreturn-type \
 		-Wunused -Wformat -Wswitch -Wshadow -Wwrite-strings -pedantic \
 		-Wmissing-declarations -Wformat-nonliteral -Wunreachable-code
