--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,7 +32,7 @@ strategy:
       imageName: 'windows-2019'
       toolchainName: mingw
       buildTargetName: all
-    linux_noble_msdos:
+    linux_noble_cross_msdos:
       imageName: 'ubuntu-24.04'
       toolchainName: cross
       buildTargetName: msdos
