cross compile to msdos in CI - fix 1

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -219,6 +219,7 @@ steps:
   displayName: 'Building mac full build'
 
 - bash: |
+    sudo apt -qq -y install libfl-dev
     export GCCVER=gcc1220
     cd sys/unix
     sh setup.sh hints/linux.370
