--- a/sys/windows/GNUmakefile
+++ b/sys/windows/GNUmakefile
@@ -339,13 +339,14 @@ ifeq "$(GCC_EXTRA_WARNINGS)" "Y"
 #
 # These match the warnings enabled on the linux.370 and macOS.370 hints builds
 #
-CFLAGSXTRA = -Wall -Wextra -Wreturn-type -Wunused -Wformat -Wswitch -Wshadow \
+CFLAGSXTRA = -Wall -Wextra -Wreturn-type -Wunused -Wswitch -Wshadow \
 	     -Wwrite-strings -pedantic -Wmissing-declarations \
 	     -Wformat-nonliteral -Wunreachable-code -Wimplicit \
 	     -Wimplicit-function-declaration -Wimplicit-int \
 	     -Wmissing-prototypes -Wold-style-definition \
 	     -Wstrict-prototypes -Wnonnull -Wformat-overflow \
-	     -Wmissing-parameter-type -Wimplicit-fallthrough
+	     -Wmissing-parameter-type -Wimplicit-fallthrough \
+	     -Wno-cast-function-type
 
 CPPFLAGSXTRA = -Wall -Wextra -Wno-missing-field-initializers -Wreturn-type \
 		-Wunused -Wformat -Wswitch -Wshadow -Wwrite-strings -pedantic \
