--- a/doc/.gitattributes
+++ b/doc/.gitattributes
@@ -11,5 +11,6 @@ fixes* NH_header=no
 *.txt NH_header=no
 * NH_filestag=(file%s_for_all_versions)
 Guidebook.tex	NH_DATESUB
-Guidebook.mn	NH_DATESUB
-*.6	NH_DATESUB
+Guidebook.mn	NH_DATESUB NHAUTODOCS
+*.6	NH_DATESUB NHAUTODOCS
+*.7	NH_DATESUB NHAUTODOCS
