--- a/doc/.gitattributes
+++ b/doc/.gitattributes
@@ -14,3 +14,4 @@ Guidebook.tex	NH_DATESUB
 Guidebook.mn	NH_DATESUB NHAUTODOCS
 *.6	NH_DATESUB NHAUTODOCS
 *.7	NH_DATESUB NHAUTODOCS
+fixes* -NHAUTODOCS
