--- a/sys/unix/Makefile.src
+++ b/sys/unix/Makefile.src
@@ -764,8 +764,9 @@ $(TARGETPFX)sfstruct.o: sfstruct.c $(HACK_H)
 
 #	date.c should be recompiled any time any of the source or include code
 #	is modified.
+DATECFLAGS = $(TARGET_CFLAGS) $(GITHASH) $(GITBRANCH) $(GITPREFIX)
 $(TARGETPFX)date.o: date.c $(HACK_H) $(HACKCSRC)  $(HOBJ) $(TARGET_HACKLIB)
-	$(TARGET_CC) $(TARGET_CFLAGS) $(GITHASH) $(GITBRANCH) $(GITPREFIX) -c -o $@ date.c
+	$(TARGET_CC) $(DATECFLAGS) -c -o $@ date.c
 
 #	date.h should be remade any time any of the source or include code
 #	is modified.  Unfortunately, this would make the contents of this
