--- a/sys/windows/vs/hacklib/hacklib.vcxproj
+++ b/sys/windows/vs/hacklib/hacklib.vcxproj
@@ -25,23 +25,23 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="$(RootDir)util\panic.c" />
-    <ClCompile Include="$(RootDir)src\hacklib.c" />
+    <ClCompile Include="$(UtilDir)panic.c" />
+    <ClCompile Include="$(SrcDir)hacklib.c" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\..\..\include\config.h" />
-    <ClInclude Include="..\..\..\..\include\config1.h" />
-    <ClInclude Include="..\..\..\..\include\context.h" />
-    <ClInclude Include="..\..\..\..\include\coord.h" />
-    <ClInclude Include="..\..\..\..\include\defsym.h" />
-    <ClInclude Include="..\..\..\..\include\global.h" />
-    <ClInclude Include="..\..\..\..\include\monattk.h" />
-    <ClInclude Include="..\..\..\..\include\monflag.h" />
-    <ClInclude Include="..\..\..\..\include\objclass.h" />
-    <ClInclude Include="..\..\..\..\include\patchlevel.h" />
-    <ClInclude Include="..\..\..\..\include\sym.h" />
-    <ClInclude Include="..\..\..\..\include\tradstdc.h" />
-    <ClInclude Include="..\..\..\..\include\windconf.h" />
+    <ClInclude Include="$(IncDir)config.h" />
+    <ClInclude Include="$(IncDir)config1.h" />
+    <ClInclude Include="$(IncDir)context.h" />
+    <ClInclude Include="$(IncDir)coord.h" />
+    <ClInclude Include="$(IncDir)defsym.h" />
+    <ClInclude Include="$(IncDir)global.h" />
+    <ClInclude Include="$(IncDir)monattk.h" />
+    <ClInclude Include="$(IncDir)monflag.h" />
+    <ClInclude Include="$(IncDir)objclass.h" />
+    <ClInclude Include="$(IncDir)patchlevel.h" />
+    <ClInclude Include="$(IncDir)sym.h" />
+    <ClInclude Include="$(IncDir)tradstdc.h" />
+    <ClInclude Include="$(IncDir)windconf.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
