--- a/sys/windows/vs/makedefs/makedefs.vcxproj
+++ b/sys/windows/vs/makedefs/makedefs.vcxproj
@@ -37,11 +37,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="$(RootDir)util\makedefs.c" />
-    <ClCompile Include="$(RootDir)src\date.c" />
-    <ClCompile Include="$(RootDir)src\monst.c" />
-    <ClCompile Include="$(RootDir)src\objects.c" />
-    <ClCompile Include="$(RootDir)src\alloc.c" />
+    <ClCompile Include="$(UtilDir)makedefs.c" />
+    <ClCompile Include="$(SrcDir)date.c" />
+    <ClCompile Include="$(SrcDir)monst.c" />
+    <ClCompile Include="$(SrcDir)objects.c" />
+    <ClCompile Include="$(SrcDir)alloc.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="$(IncDir)config.h" />
