test custom warning filter in CI

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,6 +9,7 @@ strategy:
       toolchainName: clang
       buildTargetName: all
       checkWarnings: true
+      warningTaskFilters: '\[\-W+.+\]|^((vs|ms)build|ant(\s+.+)?|gradle(w)?(\s+.+)?|grunt|gulp|maven(\s+.+)?|xamarin(android|ios)|xcode(\s+.+)?|cmake|build\s+.+)$'
     linux_jammy_gcc9_all:
       imageName: 'ubuntu-22.04'
       toolchainName: gcc9
