--- a/sys/windows/vs/uudecode/uudecode.vcxproj
+++ b/sys/windows/vs/uudecode/uudecode.vcxproj
@@ -26,7 +26,7 @@
   <Import Project="..\files.props" />
   <ItemDefinitionGroup>
     <ClCompile>
-      <AdditionalIncludeDirectories>$(IncDir);$(SysShareDir);</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(IncDir);$(SysShareDir);$(WinWin32Dir)</AdditionalIncludeDirectories>
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
